cmake_minimum_required(VERSION 3.6)
project(HackerRank30DaysOfCode_proj)

set(CMAKE_CXX_STANDARD 11)

add_subdirectory(Day10MaxConsecutiveOnesInBinary)
add_subdirectory(Day11_2DHourglassMaxSum)
add_subdirectory(Day12_Inheritance)
add_subdirectory(Day13_AbstractClass)
add_subdirectory(Day14_Scope)
add_subdirectory(Day15_LinkedList)
add_subdirectory(Day16_Exception_StringToInteger)
add_subdirectory(Day17_MoreExceptions)
add_subdirectory(Day18_QueuesAndStacks)
add_subdirectory(Day19_Interfaces)
add_subdirectory(Day20_BubbleSort)